@@ -380,6 +380,7 @@ John S. Gruber
 Dag Gruneau
 Filip Gruszczyński
 Thomas Guettler
+Ajitesh Gupta
 Michael Guravage
 Lars Gustäbel
 Thomas Güttler
