@@ -119,6 +119,9 @@ IDLE
 Tests
 -----
 
+- Issue #19683: Removed empty tests from test_minidom.  Initial patch by
+  Ajitesh Gupta.
+
 - Issue #19928: Implemented a test for repr() of cell objects.
 
 - Issue #19595, #19987: Re-enabled a long-disabled test in test_winsound.
